--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-autocalls",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "n8n community node for Autocalls - Automate phone calls using AI calling platform",
   "keywords": [
     "n8n-community-node-package",
@@ -34,7 +34,10 @@
     "prepublishOnly": "npm run build && npm run lint -c .eslintrc.prepublish.js nodes credentials package.json"
   },
   "files": [
-    "dist"
+    "dist",
+    "credentials",
+    "nodes",
+    "index.js"
   ],
   "n8n": {
 		"n8nNodesApiVersion": 1,
